Moved all DELETE requests to a single method which uses the QueryResolver. Updated README and API specification.
