# api.yml
@@ -206,11 +206,4 @@ paths:
         404:
           description: Factory device not found
         400:
-          description: Bad request
-  
-  /tasks/all:
-    delete:
-      summary: Deletes all the tasks from the database
-      responses:
-        200:
-          description: OK
+          description: Bad request 
